Fix month headers on mobile devices

--- a/styles/components/schedule/Month.module.scss
+++ b/styles/components/schedule/Month.module.scss
@@ -26,4 +26,8 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
+    .gridHeader {
+        display: none;
+    }
+
 }
